app_v5/istio/policy.yml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "mutual-tls"
  namespace: "kad"
spec:
  host: "*.kad.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
