app_v5/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kad
  namespace: kad
spec:
  hosts:
  - "kad.example.com"
  gateways:
  - kad-gateway
  http:
  - route:
    - destination:
        host: kad.kad.svc.cluster.local
        port:
          number: 80
